# rpp

./: .gitignore  Dockerfile  LICENSE  PfrApp.bat  README.md  RapasApp.bat  __version__.py  aladin.html  astrometry_lite.py  backend.py  backend_dev.py  backend_prod.py  celery_app.py  config.py  config.yaml  display_stats.py  frontend.py  gunicorn.conf.py  hash_passwords.py  launcher.py  launcher.spec  main_functions.py  manage_streamlit.sh  package-lock.json  package.json  pfr_app.py  pfr_app.spec  pfr_app_dash.py  photometry_pipeline.ipynb  pipeline.py  plate_solve.ps1  plate_solve.sh  psf_test_streamlit.py  pyproject.toml  rapas_app.py  rapas_app.spec  rapas_photometry_app.py  requirements.txt  run_all_cmd.bat  run_all_linux.sh  (+12 more)
.devcontainer/: devcontainer.json
.streamlit/: config.toml
api/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  security.py  storage.py
asta/: ASTA.py
doc/: Makefile  TUTORIAL.md  advanced_features.rst  api.rst  changelog.rst  conf.py  examples.rst  features.rst  index.rst  installation.rst  usage.rst  user_guide.rst
doc/_build/doctrees/: advanced_features.doctree  api.doctree  api_reference.doctree  changelog.doctree  examples.doctree  features.doctree  index.doctree  installation.doctree  troubleshooting.doctree  usage.doctree  user_guide.doctree
doc/_build/html/: .buildinfo  advanced_features.html  api.html  api_reference.html  changelog.html  examples.html  features.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  troubleshooting.html  usage.html  user_guide.html
doc/_build/html/_modules/: index.html  pfr_app.html
doc/_build/html/_modules/src/: pipeline.html  tools.html
doc/_build/html/_modules/tools/: get_catalog_data.html
doc/_build/html/_sources/: advanced_features.rst.txt  api.rst.txt  api_reference.rst.txt  changelog.rst.txt  examples.rst.txt  features.rst.txt  index.rst.txt  installation.rst.txt  troubleshooting.rst.txt
doc/_build/html/_static/: README.md
doc/_static/: README.md
docs/: COMPLETION_REPORT.md  FLOW_DIAGRAMS.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PANSTARRS_IMPLEMENTATION_GUIDE.md  PANSTARRS_SKYMAPPER_IMPLEMENTATION.md  PHOTOMETRY_FORMULAS.md  TEST_SCENARIOS.md  TUTORIAL.md  TUTORIAL_FR.md  advanced_features.rst  api.rst  api_reference.rst  changelog.rst  conf.py  examples.rst  features.rst  index.rst  installation.rst  troubleshooting.rst  usage.rst  user_guide.rst
hooks/: hook-photutils.py  hook_photutils.py  hook_streamlit.py
old_app/: Dockerfile  astro_pipeline.py  check_fix_wcs.py  image_subtraction.py  package-lock.json  pfr_app_stand_alone.py  photometry_pipeline.ipynb  plate_solve.ps1  plate_solve.sh  snr.py  template_sub.py
old_app/hooks/: hook_streamlit.py
pages/: api_client.py  app.py  login.py  showlogs.py
pfr_results/: SN2025dr_gaia_RP_180s_processed_header.txt
scripts/: migrate_add_wcs_zip_tables.py  migrate_legacy_db.py  satellite_trail_detector.py
src/: __version__.py  astrometry.py  config_example.json  db_tracking.py  header_utils.py  image_subtraction.py  pipeline.py  plate_solve.ps1  plate_solve.sh  progress.py  psf.py  psf_photometry.py  template_sub.py  tools.py  tools_app.py  tools_pipeline.py  transient.py  ui_helpers.py  utils.py  utils_common.py  xmatch_catalogs.py
src/templates/: aladin_template.html
static/: aladin.html  aladin_static.html  astro_pipeline.py
tasks/: __init__.py  pipeline_tasks.py
tests/: test_app_ui_regressions.py  test_backend_detection.py  test_database.py  test_header_safety.py  test_new_features.py  test_photometry.py  test_pipeline.py  test_pipeline_errors.py  test_runtime_compat.py  test_tools_pipeline.py  test_utils.py
tools/: astrometry_lite.py  display_stats.py  extract_sources.py  get_catalog_data.py
