[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RPP"
version = "1.6.0"
description = "RAPAS Photometry pipeline"
readme = "README.md"
requires-python = "==3.12"
license = {text = "MIT"}
authors = [
    {name = "Pier-Francesco Rocci"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "alabaster==1.0.0",
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "astroalign==2.6.1",
    "astropy==7.1.1",
    "astropy-iers-data==0.2025.11.3.0.38.37",
    "astropy_healpix==1.1.2",
    "astroquery==0.4.10",
    "astroscrappy==1.3.0",
    "attrs==25.3.0",
    "autocommand==2.2.2",
    "babel==2.17.0",
    "backports.tarfile==1.2.0",
    "beautifulsoup4==4.13.4",
    "blinker==1.9.0",
    "Bottleneck==1.4.2",
    "cabarchive==0.2.4",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "crc32c==2.7.1",
    "cycler==0.12.1",
    "dask==2025.5.1",
    "deprecation==2.1.0",
    "docutils==0.21.2",
    "donfig==0.8.1.post1",
    "email-validator==2.3.0",
    "fastapi==0.128.0",
    "Flask==3.1.0",
    "flask-cors==5.0.1",
    "Flask-Login==0.6.3",
    "fonttools==4.57.0",
    "frozenlist==1.6.0",
    "fsspec==2025.5.0",
    "gitdb==4.0.12",
    "GitPython==3.1.44",
    "gotrue==2.12.0",
    "h11==0.14.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "html5lib==1.1",
    "httpcore==1.0.8",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.10",
    "imageio==2.37.0",
    "imagesize==1.4.1",
    "importlib_metadata==8.0.0",
    "inflect==7.3.1",
    "iniconfig==2.1.0",
    "itsdangerous==2.2.0",
    "jaraco.classes==3.4.0",
    "jaraco.collections==5.1.0",
    "jaraco.context==6.0.1",
    "jaraco.functools==4.1.0",
    "jaraco.text==3.12.1",
    "Jinja2==3.1.6",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "keyring==25.6.0",
    "kiwisolver==1.4.8",
    "lazy_loader==0.4",
    "lief==0.16.4",
    "locket==1.0.0",
    "MarkupSafe==3.0.2",
    "matplotlib==3.10.1",
    "more-itertools==10.7.0",
    "mpmath==1.3.0",
    "multidict==6.4.3",
    "narwhals==1.36.0",
    "networkx==3.4.2",
    "numcodecs==0.16.1",
    "numpy==2.2.4",
    "packaging==24.2",
    "pandas==2.2.3",
    "partd==1.4.2",
    "patsy==1.0.1",
    "photutils==2.3.0",
    "pillow==11.1.0",
    "platformdirs==4.2.2",
    "pluggy==1.5.0",
    "postgrest==1.0.1",
    "propcache==0.3.1",
    "properimage==0.7.1",
    "protobuf==5.29.4",
    "pyarrow==20.0.0",
    "pycparser==2.22",
    "pydantic==2.11.3",
    "pydantic_core==2.33.1",
    "pydeck==0.9.1",
    "pyerfa==2.0.1.5",
    "pyFFTW==0.15.0",
    "Pygments==2.19.1",
    "PyJWT==2.10.1",
    "pyparsing==3.2.3",
    "pytest-mock==3.14.0",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.21",
    "pytz==2025.2",
    "pyvo==1.6.2",
    "pywin32-ctypes==0.2.3",
    "PyYAML==6.0.2",
    "realtime==2.4.2",
    "referencing==0.36.2",
    "regions==0.10",
    "reproject==0.14.1",
    "requests==2.32.3",
    "roman-numerals-py==3.1.0",
    "rpds-py==0.24.0",
    "scikit-image==0.25.2",
    "scipy==1.15.2",
    "scrypt==0.9.4",
    "sep==1.4.1",
    "sep-pjw==1.3.8",
    "setuptools==78.1.0",
    "sip_tpv==1.1",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "snowballstemmer==3.0.1",
    "soupsieve==2.7",
    "Sphinx==8.2.3",
    "sphinx-rtd-theme==3.0.2",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jquery==4.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "st-login-form==1.2.0",
    "st-supabase-connection==2.0.1",
    "statsmodels==0.14.4",
    "stdpipe==0.2.4",
    "storage3==0.11.3",
    "stqdm==0.0.5",
    "streamlit==1.51.0",
    "StrEnum==0.4.15",
    "striprtf==0.0.29",
    "supabase==2.15.0",
    "supafunc==0.9.4",
    "sympy==1.13.3",
    "tenacity==9.1.2",
    "tifffile==2025.5.21",
    "tinynpydb==0.1.2",
    "toml==0.10.2",
    "tomli==2.0.1",
    "toolz==1.0.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "typeguard==4.3.0",
    "typing-inspection==0.4.0",
    "typing_extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "waitress==3.0.2",
    "watchdog==6.0.0",
    "webencodings==0.5.1",
    "websockets==14.2",
    "Werkzeug==3.1.3",
    "wheel==0.45.1",
    "yarl==1.20.0",
    "zarr==3.0.8",
    "zipp==3.19.2",
    "gunicorn"
]

[project.optional-dependencies]
dev = [
    "ruff==0.11.6",
    "pytest==8.3.5",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

build = [
    "cx_Freeze==8.1.0",
    "cx_Logging==3.2.1",
]

[project.urls]
"Homepage" = "https://github.com/pierfra-rocci/rpp"
"Bug Tracker" = "https://github.com/pierfra-rocci/rpp/issues"

[project.scripts]
pfr = "run_frontend:main"

[tool.setuptools]
# packages = ["."]
# Or use: packages = "find:"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.isort]
profile = "black"
line_length = 88