[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RPP"
version = "1.6.0"
description = "RAPAS Photometry pipeline"
readme = "README.md"
requires-python = ">=3.12,<4"
license = {text = "MIT"}
authors = [
    {name = "Pier-Francesco Rocci"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    # Core scientific packages
    "numpy==2.2.4",
    "scipy==1.15.2",
    "pandas==2.2.3",
    
    # Astronomy
    "astropy==7.1.1",
    "astropy-iers-data==0.2025.11.3.0.38.37",
    "astropy_healpix==1.1.2",
    "astroquery==0.4.10",
    "astroscrappy==1.3.0",
    "photutils==2.3.0",
    "scikit-image==0.25.2",
    "stdpipe==0.2.4",
    "sep==1.4.1",
    "sep-pjw==1.3.8",
    "regions==0.10",
    "reproject==0.14.1",
    
    # Visualization
    "matplotlib==3.10.1",
    
    # Backend (FastAPI)
    "fastapi==0.128.0",
    "starlette==0.50.0",
    "python-multipart==0.0.21",
    "sqlalchemy==2.0.45",
    "werkzeug==3.1.3",
    
    # Frontend (Streamlit)
    "streamlit==1.51.0",
    
    # API/Data validation
    "pydantic==2.11.3",
    "pydantic_core==2.33.1",
    "annotated-types==0.7.0",
    
    # HTTP/Requests
    "requests==2.32.3",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "idna==3.10",
    "urllib3==2.4.0",
    
    # Time/Date
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "tzdata==2025.2",
    
    # Astronomy utilities
    "pyerfa==2.0.1.5",
    "pyFFTW==0.15.0",
    "sip_tpv==1.1",
    "statsmodels==0.14.4",
    "tqdm==4.67.1",
    
    # Image processing
    "imageio==2.37.0",
    "pillow==11.1.0",
    "tifffile==2025.5.21",
    "lazy_loader==0.4",
    "networkx==3.4.2",
    
    # Matplotlib dependencies
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.57.0",
    "kiwisolver==1.4.8",
    
    # Core utilities
    "packaging==24.2",
    "pyparsing==3.2.3",
    "sniffio==1.3.1",
    "typing_extensions==4.13.2",
    "PyYAML==6.0.2",
    "MarkupSafe==3.0.2",
    "toml==0.10.2",
    "tomli==2.0.1"
]

[project.optional-dependencies]
dev = [
    "ruff==0.11.6",
    "pytest==8.3.5",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

build = [
    "cx_Freeze==8.1.0",
    "cx_Logging==3.2.1",
]

[project.urls]
"Homepage" = "https://github.com/pierfra-rocci/rpp"
"Bug Tracker" = "https://github.com/pierfra-rocci/rpp/issues"

[project.scripts]
pfr = "run_frontend:main"

[tool.setuptools]
packages = ["src", "api", "pages"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
profile = "black"
line_length = 88