[build-system]
requires = ["setuptools==71.0.0", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RPP"
version = "1.7.3"
description = "RAPAS Photometry pipeline"
readme = "README.md"
requires-python = ">=3.12,<4"
license = {text = "MIT"}
authors = [
    {name = "Pier-Francesco Rocci"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "setuptools==71.0.0",

    # Core scientific packages
    "numpy==2.4.4",
    "scipy==1.17.1",
    "pandas==3.0.3",
    
    # Astronomy
    "astropy==7.2.0",
    "astropy-iers-data==0.2026.5.11.1.8.52",
    "astropy_healpix==1.1.3",
    "astroquery==0.4.11",
    "astroscrappy==1.3.0",
    "photutils==3.0.0",
    "scikit-image==0.26.0",
    "stdpipe==0.3.0",
    "sep==1.4.1",
    "sep-pjw==1.3.8",
    "regions==0.11",
    "reproject==0.19.0",
    "pyvo==1.8.1",
    
    # Visualization
    "matplotlib==3.10.9",
    "altair==6.1.0",
    
    # Backend (FastAPI)
    "anyio==4.13.0",
    "fastapi==0.136.1",
    "starlette==1.0.0",
    "python-multipart==0.0.28",
    "sqlalchemy==2.0.49",
    "werkzeug==3.1.8",
    "uvicorn==0.46.0",
    "httptools==0.7.1",
    
    # Frontend (Streamlit)
    "streamlit==1.57.0",
    
    # API/Data validation
    "pydantic==2.13.4",
    "pydantic_core==2.46.4",
    "email-validator==2.3.0",
    "annotated-types==0.7.0",
    "annotated-doc==0.0.4",
    
    # HTTP/Requests
    "requests==2.34.1",
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "idna==3.15",
    "urllib3==2.7.0",
    
    # Time/Date
    "python-dateutil==2.9.0.post0",
    "pytz==2026.2",
    "tzdata==2026.2",
    
    # Astronomy utilities
    "pyerfa==2.0.1.5",
    "pyFFTW==0.15.1",
    "sip_tpv==1.1",
    "statsmodels==0.14.6",
    "tqdm==4.67.3",
    
    # Image processing
    "imageio==2.37.3",
    "pillow==12.2.0",
    "tifffile==2026.5.2",
    "lazy_loader==0.5",
    "networkx==3.6.1",
    
    # Matplotlib dependencies
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.62.1",
    "kiwisolver==1.5.0",
    
    # Core utilities
    "packaging==26.2",
    "pyparsing==3.3.2",
    "sniffio==1.3.1",
    "typing_extensions==4.15.0",
    "PyYAML==6.0.3",
    "MarkupSafe==3.0.3",
    "toml==0.10.2",
    "tomli==2.4.1",
    
    # Additional dependencies
    "click==8.3.3",
    "h11==0.16.0",
    "Jaraco.classes==3.4.0",
    "jaraco.context==6.1.2",
    "jaraco.functools==4.4.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "more-itertools==11.0.2",
    "Pygments==2.20.0",
    "Referencing==0.37.0",
    "rpds-py==0.30.0",
    "tenacity==9.1.4",
    "typing-inspection==0.4.2",
]


[project.optional-dependencies]
dev = [
    "ruff>=0.11.6",
    "pytest==9.0.3",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pip-upgrade-all==0.1.6",
]

build = [
    "cx_Freeze==8.1.0",
    "cx_Logging==3.2.1",
]

[project.urls]
"Homepage" = "https://github.com/pierfra-rocci/rpp"
"Bug Tracker" = "https://github.com/pierfra-rocci/rpp/issues"

[project.scripts]
pfr = "run_frontend:main"

[tool.setuptools]
packages = ["src", "api", "pages"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
profile = "black"
line_length = 88